fixing div spacing

--- a/client/src/styles/Techs.module.css
+++ b/client/src/styles/Techs.module.css
@@ -1,7 +1,7 @@
 .block {
     margin-top: 22px;
     width:auto;
-    height: 150px;
+    height: 25px;
     background-color: rgb(52,170,210);
 }
 
